--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,9 @@ python:
   - "3.6"      # current default Python on Travis CI
   - "3.7"
 
+branches:
+  only:
+  - master
+
 script:
   - python test.py
