--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,10 @@ branches:
 
 install:
   - pip3 install coverage
+  - pip3 install codecov
 
 script:
   - coverage run -m unittest discover
+
+after_success:
+  - codecov
